--- a/1/config.yaml
+++ b/1/config.yaml
@@ -2,7 +2,7 @@ app:
   url: "https://robot-dreams-de-api.herokuapp.com"
   auth_endpoint: "/auth"
   endpoint: "/out_of_stock"
-  directory: "./data/"
+  directory: "/tmp/data"
   username: ""
   password: ""
 
